[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "openbb-arcticdb"
version = "0.1.0"
description = "ArcticDB integration for OpenBB: read stored bars as a provider, and persist any OBBject result to ArcticDB."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-only" }
dependencies = [
    "openbb-core>=1.5.8",
    "arcticdb>=6.0",
    # ArcticDB's compiled pb2 stubs only support protobuf 3-6; 7.x raises
    # NotImplementedError on `from arcticdb import Arctic`.
    "protobuf<7",
]

# Read path: `provider="arcticdb"` serves data stored in an ArcticDB library.
[project.entry-points."openbb_provider_extension"]
arcticdb = "openbb_arcticdb:arcticdb_provider"

# Write path: `result.arcticdb.write(...)` persists an OBBject result to ArcticDB.
[project.entry-points."openbb_obbject_extension"]
arcticdb = "openbb_arcticdb:ext"

[tool.setuptools.packages.find]
include = ["openbb_arcticdb*"]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [".git", "__pycache__", "*.egg-info", "build", "dist", "tests/__pycache__"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff.lint]
ignore = [
    # Import-outside-toplevel is intentional: lazy imports avoid loading
    # arcticdb/pandas/pydantic at module-import time.
    "PLC0415",
]
